[gd_scene load_steps=20 format=3 uid="uid://00xr1q336bgu"]

[ext_resource type="Script" path="res://Scripts/drill_ground.gd" id="1_bhlt2"]
[ext_resource type="Resource" uid="uid://d2qoinuor12dq" path="res://dialogues/演武场.dialogue" id="2_j02vm"]
[ext_resource type="AudioStream" uid="uid://brg1ltppwfyim" path="res://Asset/sound/闪电.mp3" id="3_et4pg"]
[ext_resource type="Texture2D" uid="uid://cqtqwhkut2gk2" path="res://Asset/城镇建筑/演武场.jpg" id="4_vq7vu"]
[ext_resource type="Texture2D" uid="uid://yxnjmxcqgl2u" path="res://addons/inventory_example/textures/inventories/Chest.png" id="5_g5flv"]
[ext_resource type="PackedScene" uid="uid://bhu5hq8kx8pov" path="res://addons/inventory_example/inventories/simple/InventoryUI.tscn" id="6_cu7sp"]
[ext_resource type="PackedScene" uid="uid://bw52ymer7ngwu" path="res://Scene/prefab/gapanel.tscn" id="7_fpvim"]
[ext_resource type="Texture2D" uid="uid://doqmi4o6negde" path="res://Asset/other/聚餐.jpg" id="8_nik30"]
[ext_resource type="PackedScene" uid="uid://ditcwds6nu8ga" path="res://Scene/prefab/soilderUpdatePanel.tscn" id="9_02127"]
[ext_resource type="PackedScene" uid="uid://cjsb43uugkud4" path="res://Scene/battleSys/battlePanel.tscn" id="10_gfhv4"]
[ext_resource type="FontFile" uid="uid://qv74ebpr4i31" path="res://Asset/Font/VonwaonBitmap-16px.ttf" id="11_014y5"]
[ext_resource type="PackedScene" uid="uid://bv5ycsl0a50uq" path="res://Scene/prefab/btnList.tscn" id="12_g1aky"]
[ext_resource type="PackedScene" uid="uid://ghiim2lkqkbe" path="res://Scene/prefab/propertyPanel.tscn" id="13_4p7r8"]
[ext_resource type="PackedScene" uid="uid://dfolt063spdso" path="res://Scene/prefab/energy.tscn" id="14_hgva0"]
[ext_resource type="Texture2D" uid="uid://rmaibsw1yjqd" path="res://Asset/城镇建筑/5_yellow.png" id="15_acxub"]

[sub_resource type="Animation" id="Animation_0bk4q"]
resource_name = "闪烁"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.6, 0.7, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.752941), Color(1, 1, 1, 0), Color(1, 1, 1, 0.882353), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44lps"]
_data = {
"闪烁": SubResource("Animation_0bk4q")
}

[sub_resource type="Animation" id="Animation_rms3s"]
resource_name = "YELLOWGUILD"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 10), Vector2(0, 6.66666), Vector2(0, 3.33331), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4gull"]
_data = {
"YELLOWGUILD": SubResource("Animation_rms3s")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_bhlt2")
dialogue_resource = ExtResource("2_j02vm")
dialogue_start = "初入演武场"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Canvas闪电" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Canvas闪电"]
offset_left = 8.0
offset_top = -34.0
offset_right = 1981.0
offset_bottom = 1165.0
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Canvas闪电/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_44lps")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Canvas闪电/ColorRect/AnimationPlayer"]
stream = ExtResource("3_et4pg")

[node name="演武场" type="Sprite2D" parent="."]
position = Vector2(953.95, 533.5)
scale = Vector2(4.06308, 3.46984)
texture = ExtResource("4_vq7vu")

[node name="bgs" type="AudioStreamPlayer2D" parent="."]
position = Vector2(895, 333)
scale = Vector2(1.6384, 1.6384)

[node name="CanvasButton" type="CanvasLayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="CanvasButton"]
self_modulate = Color(0.776471, 0.776471, 0.776471, 1)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -105.0
offset_right = -5.0
offset_bottom = 100.0
grow_horizontal = 0
texture_normal = ExtResource("5_g5flv")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="CanvasInventory" type="CanvasLayer" parent="."]

[node name="InventoryAny" parent="CanvasInventory" instance=ExtResource("6_cu7sp")]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -307.0
offset_top = 97.0
offset_right = -7.0
offset_bottom = 397.0
grow_horizontal = 0
inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"
metadata/_edit_use_anchors_ = true

[node name="oldsoildereat" parent="CanvasInventory" instance=ExtResource("7_fpvim")]
visible = false
offset_left = 9.0
offset_top = 5.0
offset_right = 9.0
offset_bottom = 5.0
txt = ExtResource("8_nik30")
contextEX = "关羽、张飞、赵云现在可以被你调用！
(或许将军可以试试练兵功能来快速提升武将等级）"
titleEX = "老兵饭局："
dialogue_resource = ExtResource("2_j02vm")
clickEvent = "饭局结束"

[node name="trainPanel" parent="CanvasInventory" instance=ExtResource("9_02127")]
visible = false

[node name="Control3" parent="CanvasInventory" instance=ExtResource("14_hgva0")]
offset_left = 1610.0
offset_top = -14.0
offset_right = 1610.0
offset_bottom = -14.0
scale = Vector2(0.1, 0.1)

[node name="battlePane" parent="CanvasInventory" instance=ExtResource("10_gfhv4")]
visible = false

[node name="Control" parent="CanvasInventory" instance=ExtResource("13_4p7r8")]
offset_left = 1638.0
offset_top = 694.0
offset_right = 1678.0
offset_bottom = 734.0

[node name="point" type="Node2D" parent="CanvasInventory"]
visible = false
position = Vector2(1765, 660)
rotation = -1.5708

[node name="5Yellow" type="Sprite2D" parent="CanvasInventory/point"]
rotation = -1.5708
scale = Vector2(4, 4)
texture = ExtResource("15_acxub")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasInventory/point/5Yellow"]
libraries = {
"": SubResource("AnimationLibrary_4gull")
}
autoplay = "YELLOWGUILD"

[node name="title" type="RichTextLabel" parent="."]
visible = false
offset_left = -9.0
offset_top = 76.0
offset_right = 1906.0
offset_bottom = 312.0
theme_override_fonts/normal_font = ExtResource("11_014y5")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[center][rainbow]阴[/rainbow][wave amp=50 frep=100]三国[/wave][rainbow]谋论[/rainbow]-[tornado]徐州篇[/tornado][/center]"
tab_size = 6

[node name="Control2" parent="." instance=ExtResource("12_g1aky")]
offset_right = 106.0
offset_bottom = 82.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
